--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,13 @@ body {
   backdrop-filter: blur(2px);
 } */
 
+/* Banner shadow */
+.pathShadow {
+  border-radius: 496.893px;
+  background: #02B81C;
+  mix-blend-mode: lighten;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
