--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,13 @@ body {
   mix-blend-mode: lighten;
 }
 
+/* About shadow */
+.pathShadowAbout {
+  border-radius: 496.893px;
+  background: #019617;
+  mix-blend-mode: lighten;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
