--- a/src/index.css
+++ b/src/index.css
@@ -23,9 +23,16 @@ body {
 }
 
 /* About shadow */
-.pathShadowAbout {
+.pathShadowTop {
   border-radius: 496.893px;
-  background: #019617;
+  background: #019617ef;
+  /* background: #019617; */
+  mix-blend-mode: lighten;
+}
+
+.pathShadowBottom {
+  border-radius: 496.893px;
+  background: #061824;
   mix-blend-mode: lighten;
 }
 
