--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,15 @@ body {
   mix-blend-mode: lighten;
 }
 
+/* Buy SAT Token */
+.tokenShadow {
+  border-radius: 819.156px;
+  opacity: 0.6;
+  background: #02B81C;
+  mix-blend-mode: lighten;
+  filter: blur(267px);
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
