--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,15 @@ body {
   filter: blur(267px);
 }
 
+/* Roadmap */
+.mapShadow {
+  border-radius: 1326px;
+  opacity: 0.6;
+  background: #02B81C;
+  filter: blur(267px);
+  mix-blend-mode: lighten;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
