--- a/src/index.css
+++ b/src/index.css
@@ -70,6 +70,15 @@ body {
   mix-blend-mode: lighten;
 }
 
+/* GlobeShadow */
+.globeShadow {
+  border-radius: 1326px;
+  opacity: 0.6;
+  background: #02B81C;
+  filter: blur(267px);
+  mix-blend-mode: lighten;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
