--- a/src/index.css
+++ b/src/index.css
@@ -70,7 +70,7 @@ body {
   mix-blend-mode: lighten;
 }
 
-/* GlobeShadow */
+/* Roadmap */
 .globeShadow {
   border-radius: 1326px;
   opacity: 0.6;
@@ -78,6 +78,9 @@ body {
   filter: blur(267px);
   mix-blend-mode: lighten;
 }
+
+/* NewUnlites */
+
 
 @layer base {
   :root {
