--- a/src/index.css
+++ b/src/index.css
@@ -80,7 +80,13 @@ body {
 }
 
 /* NewUnlites */
-
+.unlitShadow {
+  border-radius: 1326px;
+  opacity: 0.6;
+  background: #02b81d6e;
+  filter: blur(267px);
+  mix-blend-mode: lighten;
+}
 
 @layer base {
   :root {
