--- a/src/index.css
+++ b/src/index.css
@@ -88,6 +88,13 @@ body {
   mix-blend-mode: lighten;
 }
 
+.whyChooseSAT {
+  border-radius: 819.156px;
+  opacity: 0.6;
+  background: #02B81C;
+  filter: blur(267px);
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
