--- a/src/index.css
+++ b/src/index.css
@@ -95,6 +95,14 @@ body {
   filter: blur(267px);
 }
 
+/* Footer */
+.footerShadow {
+  opacity: 0.6;
+  background: #02b81d6e;
+  filter: blur(700px);
+  mix-blend-mode: lighten;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
